terraform/main.tf
# Provider definition
provider "aws" {
  region = "us-east-1"
}

# Retrieve latest Amazon Linux AMI
data "aws_ami" "latest_amazon_linux" {
  owners      = ["amazon"]
  most_recent = true
  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }
}


# Retrieve the default VPC id
data "aws_vpc" "default" {
  default = true
}

locals {
  prefix = "clo835"
  default_tags = {
    Owner   = "Krishna"
    Project = "CLO835"
  }
}

# Provisioning EC2 instance
resource "aws_instance" "my_amazon" {
  ami                         = data.aws_ami.latest_amazon_linux.id
  instance_type               = "t2.micro"
  key_name                    = aws_key_pair.my_key.key_name
  vpc_security_group_ids      = [aws_security_group.my_sg.id]
  associate_public_ip_address = false

  lifecycle {
    create_before_destroy = true
  }

  tags = merge(local.default_tags,
    {
      "Name" = "${local.prefix}-Amazon-Linux"
    }
  )
}

# Security Group
resource "aws_security_group" "my_sg" {
  name        = "allow_ssh_and_http"
  description = "Allow SSH and custom HTTP inbound traffic"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description      = "SSH from everywhere"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  # Inbound rules for enabling custom tcp ports to run the application on different ports
  ingress {
    description      = "HTTP port 8081"
    from_port        = 8081
    to_port          = 8081
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  
  ingress {
    description      = "HTTP port 8082"
    from_port        = 8082
    to_port          = 8082
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  
  ingress {
    description      = "HTTP port 8083"
    from_port        = 8083
    to_port          = 8083
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = merge(local.default_tags,
    {
      "Name" = "${local.prefix}-sg"
    }
  )
}

# Adding SSH key to EC2 instance
resource "aws_key_pair" "my_key" {
  key_name   = local.prefix
  public_key = file("${local.prefix}.pub")
}


resource "aws_ecr_repository" "my_ecr_repo" {
  name = "assignment1-repo"
  image_scanning_configuration {
    scan_on_push = true
  }
}
